fixed one more tolist issue